[tool.poetry]
name = "pyosrm"
version = "0.1.0"
description = "A toolkit with python wrappers to interact with an OSRM API machine."
authors = ["Nick Fournier <nick.fournier@rsginc.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
geopandas = "^0.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
